--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -877,6 +877,36 @@ This would give us the friction forces, from which we could calculate $\dot x_{k
 
 Furthermore, I don't think the traditional way is capable of encoding sticking. If you keep your velocity as a real number, there's no meaningful way of constraining it to be zero in the next time step under sticking. However, if you decompose velocity into positive and negative components, you could potentially RELU the two output velocities to help give you that nonlinear sticking behavior.
 
+\subsubsection{Bilevel optimization formulation}
+I did some experiments differentiating through the solution of an LCP using Zico's stuff. The basic issue was that if you overestimate $\mu$, for example, any pertubations of $\mu$ might still cause sticking. We therefore should try to relax the hard inequality constraints and turn them into soft inequality constraints in the inner optimization (with hard inequality $\lambda_i \geq 0$):
+
+\begin{align*}
+      &\min _{f,G} \sum_i \min_{\lambda_i} \alpha_1 prederror(x_i, \lambda_i) + \alpha_2 \lambda_i (G \lambda_i + f) + \alpha_3 \l (G \lambda_i + f) \\
+= &\min _{f,G} \sum_i \min_{\lambda_i} \alpha_1 \left(v_{k + 1} - (v_k + \lambda^+_i - \lambda^-_i + u_i)\right)^2 + \alpha_2 \lambda_i^T G \lambda_i + \alpha_2 f^T \lambda_i + (G\lambda_i + f)^T (G \lambda_i + f) \\
+  &\textrm{Write $\beta_i = v_{k+1} - v_k + u_i$: } \\
+= &\min _{f,G} \sum_i \min_{\lambda_i} \alpha_1 \left(\beta_i + \lambda^+_i - \lambda^-_i\right)^2 + \alpha_2 \lambda_i^T G \lambda_i + \alpha_2 f^T \lambda_i + (\lambda_i^TG^T + f^T) (G \lambda_i + f) \\
+= &\min _{f,G} \sum_i \min_{\lambda_i} \alpha_1 \left(\beta_i^2 + \lambda^+_i^2 + \lambda^-_i^2 + 2\beta_i \lambda^+_i - 2 \beta_i \lambda^-_i \right - 2\lambda^+_i \lambda^-_i) 
+    + \alpha_2 \lambda_i^T G \lambda_i + \alpha_2 f^T \lambda_i + 
+      (\lambda_i^TG^T G \lambda_i + f^T G \lambda_i + \lambda_i^TG^T f + f^T f) \\
+  &\textrm{Drop $\beta_i^2$ since it doesn't matter: } \\
+= &\min _{f,G} \sum_i \min_{\lambda_i} \alpha_1 \left(\lambda^+_i^2 + \lambda^-_i^2 + 2\beta_i \lambda^+_i - 2 \beta_i \lambda^-_i \right - 2\lambda^+_i \lambda^-_i) 
+    + \alpha_2 \lambda_i^T G \lambda_i + \alpha_2 f^T \lambda_i + 
+      (\lambda_i^TG^T G \lambda_i + f^T G \lambda_i + \lambda_i^TG^T f + f^T f) \\
+  &\textrm{Move $f$s out in front, $n$ is num samples: } \\
+    = &\min _{f,G} n f^T f + \sum_i \min_{\lambda_i} \alpha_1 \lambda_i^T 
+        \begin{bmatrix} 1 & -1 & 0 \\ -1 & 1 & 0 \\ 0 & 0 & 0 \end{bmatrix} 
+        \lambda_i + \alpha_1 \rvec{2 \beta_i & -2 \beta_i & 0} \lambda_i
+    + \alpha_2 \lambda_i^T G \lambda_i + \alpha_2 f^T \lambda_i + 
+        (\lambda_i^TG^T G \lambda_i + f^T G \lambda_i + f^T G \lambda_i) \\
+    = &\min _{f,G} n f^T f + \sum_i \min_{\lambda_i} \lambda_i^T 
+    \left( \alpha_1 \begin{bmatrix} 1 & -1 & 0 \\ -1 & 1 & 0 \\ 0 & 0 & 0 \end{bmatrix}
+        + \alpha_2 G + \alpha_3 G^T G 
+    \right)
+    \lambda_i + \left(\alpha_1 \rvec{2 \beta_i & -2 \beta_i & 0} + \alpha_2 f^T + 2 \alpha_3 f^T G\right) \lambda_i \\
+\end{align*}
+
+Note I gave up on tracking $\alpha_3$ through the algebra. Wait, we definitely want hinge loss on the nonnegativity constraint...
+
 \section{Random ideas}
 \begin{itemize}
     \item Markov random field / Markov chain for state transitions. Captures multimodality. However, continuous and multidimensional state space is an issue. Could potentially use stick/slip/detach as states instead.
@@ -884,5 +914,6 @@ Furthermore, I don't think the traditional way is capable of encoding sticking. 
     \item Relu into each element of $M$ (one pos, one neg) -> learn exact zeros in $M$
     \item Use gamma to determine sticking? Doesn't actually work that well
     \item Learn $D$ matrix!
+    \item For bilevel optimization idea: encode inner soft constraints function as KKT equality conditions, then just impose these as conditions on the higher level optimization problem.
 \end{itemize}
 \end{document}
