--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -253,12 +253,9 @@
     \begin{itemize}
         \item Want symmetric part of $M + D$ to have nonnegative eigenvalues
         \item Eigenvalues of $D$ nonnegative, real
-        \item In simple case:
-        \begin{itemize}
-            \item Eigenvalues of $M$ complex with nonnegative real part
-        \end{itemize}
-        \item Scaling $D$ with sufficiently large constant?
+        \item Eigenvalues of $M$ complex with nonnegative real part
         \item Extend analysis to full Anitescu formulation
+        \item Scaling $D$ with sufficiently large constant?
     \end{itemize}
 \end{frame}
 
@@ -279,8 +276,13 @@
 \end{frame}
 
 \begin{frame}[plain,c]
-    \begin{center}
-        \Huge Thank you! 
+    \frametitle{Thank you!}
+    \begin{enumerate}
+        \small
+        \item Anitescu, M., and F. A. Potra. ``Formulating Dynamic Multi-rigid-body Contact Problems with Friction as Solvable Linear Complementarity Problems." (1996).
+        \item Stewart, David, and Jeffrey C. Trinkle. ``An implicit time-stepping scheme for rigid body dynamics with coulomb friction." Proceedings 2000 ICRA. Millennium Conference. IEEE International Conference on Robotics and Automation. Symposia Proceedings (Cat. No. 00CH37065). Vol. 1. IEEE, 2000. 
+        \item de Avila Belbute-Peres, Filipe, et al. ``End-to-end differentiable physics for learning and control." Advances in Neural Information Processing Systems. 2018. 
+        \item Amos, Brandon, and J. Zico Kolter. ``Optnet: Differentiable optimization as a layer in neural networks." Proceedings of the 34th International Conference on Machine Learning-Volume 70. JMLR. org, 2017. 
     \end{center}
 \end{frame}
 
